syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/grpc/ytsr";
package ytsr;
import "google/protobuf/empty.proto";

service Ytsr {
  rpc Search(SearchRequest) returns (SearchResponse) {}
}

message SearchRequest {
  string search = 1;
	bool only_links = 2;
}

message SongAuthor {
  string name = 1;
  string channelId = 2;
  optional string avatarUrl = 3;
}

message Song {
  string title = 1;
  string id = 2;
  uint64 views = 3;
  uint64 duration = 4;
  optional string thumbnailUrl = 5;
  bool isLive = 6;
  optional SongAuthor author = 7;
	optional string link = 8;
}

message SearchResponse {
  repeated Song songs = 1;
}
